* 2012-06-13 - thorben.betten@open-xchange.com

 - Fix for bug 22304: Drop remaining "<![endif]-->" from HTML content

* 2012-06-12 - thorben.betten@open-xchange.com

 - Fix for bug 22294: Dealing with possible empty sub-type
 - Fix for bug 22298: Showing proper error message for failed authentication against primary mail account & introduced property to specify
                      how long such a failed authentication is remembered to avoid possible DoS attack

* 2012-06-11 - thorben.betten@open-xchange.com

 - Fix for bug 22286: Discard unsafe conditional comments
 - Fix for bug 22284: Remove possible double accents in start of a HTML tag
 - Fix for bug 22287: URL-encode Servlet path on error response
 - Fix for bug 21430: Convert login string to puny-code representation if appears to be an Email address

* 2012-06-08 - martin.herfurth@open-xchange.com

 - Fix for bug 22273: Removing appointments where i am not the organizer.

* 2012-06-08 - tobias.friedrich@open-xchange.com

 - Fix for bug 21287: Implemented free/busy for iCal

* 2012-06-08 - thorben.betten@open-xchange.com

 - Fix for bug 22261: Only check secret for not null rather than possible empty string
 - Fix for bug 22277: Fixed possible NPE
 - Fix for bug 22274: Fixed possible NPEs
 - Fix for bug 22276: Proper handling of possible NumberFormatException
 - Fix for bug 22281: Setting proper account identifier in MailMessage instance
 - Fix for bug 22256: Try to resolve request's data to a JSON array

* 2012-06-07 - thorben.betten@open-xchange.com

 - Fix for bug 22162: Checking if uploaded file's Content-Type starts with "application/force" to let its MIME type be resolved by file name

* 2012-06-06 - martin.herfurth@open-xchange.com

 - Fix for bug 22258: Fixed missing folder-id on invitation accepts.
 - Fix for bug 21691: Initial Alarm on new Appointments.

* 2012-06-06 - thorben.betten@open-xchange.com
