@@ -135,4 +135,4 @@ com.openexchange.servlet.echoHeaderName=X-Echo-Header
 com.openexchange.log.propertyNames=com.openexchange.ajp13.remoteAddress(ERROR),com.openexchange.ajp13.remotePort(ERROR),com.openexchange.session.userId(DEBUG),com.openexchange.session.contextId(DEBUG),com.openexchange.session.clientId(DEBUG)
 
 # Specify the max. number of allowed attributes for a JSON object
-com.openexchange.json.maxSize=1000
+com.openexchange.json.maxSize=2500
