@@ -1,6 +1,7 @@
 * 2012-06-13 - thorben.betten@open-xchange.com
 
  - Fix for bug 22304: Drop remaining "<![endif]-->" from HTML content
+ - Fix for bug 22300: Increased default value for property "com.openexchange.json.maxSize" in file 'server.properties' from 1000 to 2500
 
 * 2012-06-12 - thorben.betten@open-xchange.com
 
